--- a/TODO
+++ b/TODO
@@ -1,17 +1,15 @@
-BUG: only First flag dont work in TSubScheme: only to out0/init params
-Subscheme param link ^
 correct places for reset, set_link, *structChange..
 Edit Object props? (on add?)
 Subscheme libs (and dirs).
 Documenation: cmdline options, common workflow.
-Refresh (set/get) in DataDialog
+Show HolderData props
+Refresh (set/get) in DataDialog + reload (tmp object?)
 LaboDoc: getModel + use in StatusModel
 StatusTip(col=2) for StatusModel
 Create Action fun + subclass QAction? (menu to place, flags)
 Controlled Scheme size.
 Long descriptions in schems, plots .... (button)
 When to [re]create shadow objects?
-Check: when to reset model?
 Check: update link values only after step - prep for multi-threading (see TSubScheme)
 Error handling (from inner to iface)
 Store script errors (and data?)
@@ -31,6 +29,7 @@ Run script before/after run (+ file)
 Placeholder object: param is the type of real object?
 QScintilla? Dialog or SubWindow?
 Shadow main scheme?
+BUG/Feature: only First flag dont work in TSubScheme: only to out0/init params
 
 Application config: to TDataSet?
 
