Add system-aware dirs handling.
Definitions fixes.
Provide DOUBLE_PREC (17) to set conversion double->string precision.
Bump version to 0.0.2.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 correct places for reset, set_link, *structChange..
 Edit Object props? (on add?)
-sep prop: bitfield?
+props: v_min, v_max: precalculate?
 Subscheme libs (and dirs).
+sep prop: bitfield?
+Decoration objects.
 Documenation: cmdline options, common workflow.
 Show HolderData props
 LaboDoc: getModel + use in StatusModel
