--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 correct places for reset, set_link, *structChange..
 BUG: mofified state (i.e. after autocreated scheme removal)
+BUG: 'sep' property is not saved / restored
+BUG: relink required after element paste.
 Long descriptions in schems, plots .... (button)
 add Flag: call parent post_set if changed.
 sep prop: bitfield?
