Add AtScopeExit class;
But not yet use it.
Add and use IGNORE_STRUCT_CHANGE_HERE, but better places required.

--- a/TODO
+++ b/TODO
@@ -1,11 +1,15 @@
 correct places for reset, set_link, *structChange..
 BUG: mofified state (i.e. after autocreated scheme removal)
 BUG: huge time on model params edit. May be containers must have nodialedit flag or depth limit?
-  What about redo?
+  What about undo?
+  shadow object copy, not XML representation.
+  as clone with other/null parent, but need copyFrom/copyTo, swap/inplace func.
 Long descriptions in schems, plots .... (button)
+text with substitutions - plot labels or more? not only double. and TeX-aware.
+  @{name.name:mod} mod: s/x/y/, maxlen=500,
+  common TeX preambula +/= per label
 add Flag: call parent post_set if changed. and supress for mass changes. set/do_set?
 sep prop: bitfield?
-updSuspended: like setModified
 Create arrays in dialogs.
 Script 'help' function + list of top-level objects and functions.
 Decoration objects.
