Fixed color transparency save/edit.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 correct places for reset, set_link, *structChange..
-BUG: Color tranparensy not preserved on dialog
 BUG: fail to link TOutArr to Simulation param.
 BUG: mofified state (i.e. after autocreated scheme removal)
 BUG: huge time on model params edit. May be containers must have nodialedit flag or depth limit?
@@ -11,6 +10,7 @@ Reorder objects in list-alike containers.
 text with substitutions - plot labels or more? not only double. and TeX-aware.
   @{name.name:mod} mod: s/x/y/, maxlen=500,
   common TeX preambula +/= per label
+Object: double or link
 add Flag: call parent post_set if changed. and supress for mass changes. set/do_set?
 sep prop: bitfield?
 Fill, import, export special arrays.
