--- a/TODO
+++ b/TODO
@@ -1,13 +1,9 @@
-!Check: update link values only after step - prep for multi-threading (see TSubScheme)
-Holder: double or link
+partialy done: update link values only after step - prep for multi-threading (see TSubScheme)
 Objects in plot.
 correct places for reset, set_link, *structChange..
 BUG: fail to link TOutArr to Simulation param.
 BUG: modified state (i.e. after autocreated scheme removal)
-BUG: huge time on model params edit. May be containers must have nodialedit flag or depth limit?
-  What about undo?
-  shadow object copy, not XML representation.
-  as clone with other/null parent, but need copyFrom/copyTo, swap/inplace func.
+BUG/Feature: only First flag dont work in TSubScheme: only to out0/init params
 Long descriptions in schems, (button) - how to edit?
 Reorder objects in list-alike containers.
 add Flag: call parent post_set if changed. and supress for mass changes. set/do_set?
@@ -37,7 +33,6 @@ Tests
 Autocorrelation?
 Placeholder object: param is the type of real object?
 Shadow/backup/undo main scheme?
-BUG/Feature: only First flag dont work in TSubScheme: only to out0/init params
 More stylesheets
 props: v_min, v_max: precalculate?
 PlotLabel: real TeX, common TeX preambula +/= per label
