--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 partialy done: update link values only after step - prep for multi-threading (see TSubScheme)
 Objects in plot.
 correct places for reset, set_link, *structChange..
+Sepagate layout managers for block in DataDialog
 BUG: fail to link TOutArr to Simulation param.
 BUG: modified state (i.e. after autocreated scheme removal)
 BUG/Feature: only First flag dont work in TSubScheme: only to out0/init params
