--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
 partialy done: update link values only after step - prep for multi-threading (see TSubScheme)
-Objects in plot.
 correct places for reset, set_link, *structChange..
 Sepagate layout managers for block in DataDialog
 BUG: fail to link TOutArr to Simulation param.
 BUG: modified state (i.e. after autocreated scheme removal)
 BUG/Feature: only First flag dont work in TSubScheme: only to out0/init params
 Long descriptions in schems, (button) - how to edit?
-Reorder objects in list-alike containers.
+Reorder objects in list-alike containers. - require artificial numeration
 add Flag: call parent post_set if changed. and supress for mass changes. set/do_set?
 sep prop: bitfield?
 Fill, import, export special arrays.
