Add 'R' - Reload hotkey in MglView.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-TFileSimple - just values
+MglView: better autoscale
 Combine subscheme links with ordinary. TSubScheme I/O redesign?
-HolderInt -> long, or array sizes - long
+Holder*Array -> long indexes, More dimensions. Measure vector::size_t.
 TOutArr: use InputSimple (need conversion)
 TModel::startRun: list on vars to copy. List for engine aliases?
 chrono sleep_untill
