Add DataDialog copy/paste.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Combine subscheme links with ordinary. TSubScheme I/O redesign?
+DataHolders: ToXMLString
 Holder*Array -> long indexes, More dimensions. Measure vector::size_t.
 TOutArr: use InputSimple (need conversion)
 TModel::startRun: list on vars to copy. List for engine aliases?
