--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 More correct arrays in dialog (+DataLabel, QFrame).
-Fix/limit props on object load/create?
+Fix/limit props on object load/create? Check setParm("props") in ctors.
+List elems as params (for dyn).
 More trigger types.
 TMatrix3D + rotate (separate/same) + Quaternion?
 DataDialog: Reset to default all/elem, revert elem. May be menu button. Or R mouse button
