--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
-More correct arrays in dialog (+DataLabel, QFrame).
 Fix/limit props on object load/create? Check setParm("props") in ctors.
 List elems as params (for dyn).
-More trigger types.
-TMatrix3D + rotate (separate/same) + Quaternion?
-DataDialog: Reset to default all/elem, revert elem. May be menu button. Or R mouse button
+TMatrix3D(done) + rotate (separate/same) + Quaternion?
+DataDialog: Reset to default all. May be menu button.
 Combine subscheme links with ordinary. TSubScheme I/O redesign?
 DataHolders: ToXMLString
 Holder*Array -> long indexes, More dimensions. Measure vector::size_type=8, size_t=8. win32?
